--- a/coronaStats/Templates/result.html
+++ b/coronaStats/Templates/result.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+     <link rel= "stylesheet" type= "text/css" href="{{url_for('static',filename='main.css')}}">
     <meta charset="UTF-8">
     <title>Result</title>
 </head>
 <body>
-<ul>
+<h1><p> Covid-19 Tracker</p></h1>
+<ul class="ul_result">
 {% for item in data %}
     <li>City name:{{item[0]}}</li>
     <li>Province name:{{item[1]}}</li>
@@ -16,5 +18,14 @@
     <br><br>
 {% endfor %}
 </ul>
+<footer>
+  <nav>
+    <ul>
+      <li class="footer_nav_li"> ©Apnav Poptani-Covid Tracker</li>
+      <li class="footer_nav_li"><a href="#">About </a></li>
+      <li class="footer_nav_li"><a href="#">Contact </a></li>
+    </ul>
+  </nav>
+	</footer>
 </body>
 </html>
