--- a/coronaStats/Templates/result.html
+++ b/coronaStats/Templates/result.html
@@ -9,12 +9,12 @@
 <h1><p> Covid-19 Tracker</p></h1>
 <ul class="ul_result">
 {% for item in data %}
-    <li>City name:{{item[0]}}</li>
-    <li>Province name:{{item[1]}}</li>
-    <li>Country:{{item[2]}}</li>
-     <li>Confirmed:{{item[3]}}</li>
-     <li>Deaths:{{item[4]}}</li>
-    <li>Recovered:{{item[5]}}</li>
+    <li>City : {{item[0]}}</li>
+    <li>Province : {{item[1]}}</li>
+    <li>Country: {{item[2]}}</li>
+     <li>Confirmed : {{item[3]}}</li>
+     <li class="li_death">Deaths : {{item[4]}}</li>
+    <li class="li_recovered">Recovered : {{item[5]}}</li>
     <br><br>
 {% endfor %}
 </ul>
