--- a/templates/index.html
+++ b/templates/index.html
@@ -29,7 +29,7 @@
       </select>
       <br>
       <br>
-      <input type="submit" value="Submit" class="btn btn--m">
+      <input type="submit" value="Submit" class="btn w3-btn w3-white">
     </form>
   </div>
     <div class="div_space w3-third w3-container">
@@ -46,7 +46,7 @@
       </select>
       <br>
       <br>
-      <input type="submit" value="Submit" class="btn btn--m">
+      <input type="submit" value="Submit" class="btn w3-btn w3-white">
     </form>
   </div>
   <div class="div_space w3-third w3-container">
@@ -66,7 +66,7 @@
       </select>
       <br>
       <br>
-      <input type="submit" value="Submit" class="btn btn--m">
+      <input type="submit" value="Submit" class="btn w3-btn w3-white">
     </form>
   </div>
 </div>
