--- a/templates/index.html
+++ b/templates/index.html
@@ -38,7 +38,7 @@
       <br>
       <br>
       <select class="select-style required" name="pName" required>
-        <option name="none" value="" selected disabled>Select City</option>
+        <option name="none" value="" selected disabled>Select State</option>
               {% for item in data3 %}
         <option name="{{ item }}" >{{ item }} </option>
          {% endfor %}
