--- a/templates/index.html
+++ b/templates/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
+       <meta name="description" content="Covid-19 stats by city,state or country">
+       <meta name="keywords" content="Python, Flask, HTML, CSS, JavaScript">
+      <meta name="author" content="Apnav Poptani">
       <link rel= "stylesheet" type= "text/css" href="{{url_for('static',filename='main.css')}}">
       <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <meta charset="utf-8">
     <title>Corona stats</title>
 
@@ -18,7 +21,7 @@
       <label id="cName">Search By US City</label>
       <br>
       <br>
-      <select class="select-style required" name="cName" required>
+      <select class="select-style" name="cName" required>
         <option name="none" value="" selected disabled>Select City</option>
           {% for item in data1 %}
 
@@ -29,7 +32,7 @@
       </select>
       <br>
       <br>
-      <input type="submit" value="Submit" class="btn w3-btn w3-white">
+      <input type="submit" value="Submit" class="btn btn--s">
     </form>
   </div>
     <div class="div_space w3-third w3-container">
@@ -37,7 +40,7 @@
       <label id="pName">Search By US State</label>
       <br>
       <br>
-      <select class="select-style required" name="pName" required>
+      <select class="select-style " name="pName" required>
         <option name="none" value="" selected disabled>Select State</option>
               {% for item in data3 %}
         <option name="{{ item }}" >{{ item }} </option>
@@ -46,7 +49,7 @@
       </select>
       <br>
       <br>
-      <input type="submit" value="Submit" class="btn w3-btn w3-white">
+      <input type="submit" value="Submit" class="btn btn--s">
     </form>
   </div>
   <div class="div_space w3-third w3-container">
@@ -66,7 +69,7 @@
       </select>
       <br>
       <br>
-      <input type="submit" value="Submit" class="btn w3-btn w3-white">
+      <input type="submit" value="Submit" class="btn btn--s">
     </form>
   </div>
 </div>
